--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.ImdMarket"
         tools:targetApi="31">
         <activity
+            android:name=".ListarProdutosActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DeletarActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AlterarActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CadastrarActivity"
+            android:exported="false" />
+        <activity
             android:name=".MenuActivity"
             android:exported="false" />
         <activity
